# c-algorithms

./: CMakeLists.txt  Solution.cpp  Solution.h  main.cpp
design/: PhoneDirectory.h  TicTacToe.h
slidingwindow/: LongestSubstringWithAtMostTwoDistinctCharacters.h
unionfind/: NumberOfConnectedComponentsInAnUndirectedGraph.h  SatisfiabilityOfEqualityEquations.h
